--- a/assets/src/css/btc-paywall-public.css
+++ b/assets/src/css/btc-paywall-public.css
@@ -998,6 +998,7 @@ a.btcpw_pay__download {
 #page_tipping_form fieldset:not(:first-of-type) {
   display: none;
 }
+
 #btcpw_page_logo_wrap {
   width: 180px;
   height: 180px;
@@ -1296,4 +1297,11 @@ Revenue types
 #btcpw_revenue_file_button input[type='submit'] {
   padding: 10px;
   text-transform: uppercase;
+}
+
+/**
+Pay-per-file
+*/
+.btcpw_digital_download_protected_area fieldset:not(:first-of-type) {
+  display: none;
 }
