--- a/assets/src/css/btc-paywall-admin.css
+++ b/assets/src/css/btc-paywall-admin.css
@@ -292,13 +292,15 @@ div.btcpw_help_link a:hover {
 
 #btcpw_pay_per_post_paywall,
 #btcpw_pay_per_view_paywall,
-#btcpw_pay_per_file_paywall {
+#btcpw_pay_per_file_paywall,
+#btcpw_general_pay_per_view_options_paywall {
   display: flex;
 }
 
 #btcpw_pay_per_post_paywall > div,
 #btcpw_pay_per_view_paywall > div,
-#btcpw_pay_per_file_paywall > div {
+#btcpw_pay_per_file_paywall > div,
+#btcpw_general_pay_per_view_options_paywall > div {
   flex: 1;
 }
 
@@ -451,4 +453,64 @@ div.btcpw_help_link a:hover {
 }
 .btcpw_download_product {
   display: flex;
+}
+/*
+Settings Tabs
+*/
+.btcpw.nav-tab-wrapper {
+  border: none !important;
+  padding-top: 0;
+  overflow: hidden;
+  height: 50px;
+  margin: 0 -20px 0 -20px;
+}
+.btcpw.modules_sub_nav {
+  list-style: none;
+  margin: 12px 0 3px;
+  padding: 0;
+  float: left;
+}
+.btcpw.subsub {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  float: left;
+}
+.btcpw.subsub a {
+  line-height: 2;
+  padding: 0.2em;
+  margin: 0 3px 0 0;
+  text-decoration: none;
+  font-size: 14px;
+  box-shadow: none;
+  font-weight: 400;
+}
+.btcpw.subsub.modules_sub_nav li {
+  display: inline-block;
+  margin: 0 0 0 3px;
+  padding: 0;
+  white-space: nowrap;
+  color: #d3d3d3;
+  font-weight: 300;
+  font-size: 16px;
+}
+
+.btcpw.nav-tab-wrapper .nav-tab.nav-tab-active {
+  background: #f1f1f1;
+  box-shadow: inset 0 4px 0 #2980b9;
+  margin: 0;
+}
+.btcpw.nav-tab-wrapper .nav-tab {
+  float: left;
+  border: 1px solid #c3c4c7;
+  border-bottom: none;
+  margin-left: 0.5em;
+  padding: 5px 10px;
+  font-size: 14px;
+  line-height: 1.71428571;
+  font-weight: 600;
+  background: #dcdcde;
+  color: #50575e;
+  text-decoration: none;
+  white-space: nowrap;
 }
