--- a/assets/src/css/btc-paywall-admin.css
+++ b/assets/src/css/btc-paywall-admin.css
@@ -432,20 +432,6 @@ div.btcpw_help_link a:hover {
   cursor: pointer;
 }
 
-/* .btcpaywall_payment_container {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-.btcpaywall_payment_container input {
-  width: 50%;
-}
-
-.btcpaywall_payment_container label {
-  display: inline-block;
-  vertical-align: baseline;
-} */
-
 .btcpw_product_file_download {
   display: flex;
   flex-direction: column;
@@ -513,4 +499,9 @@ Settings Tabs
   color: #50575e;
   text-decoration: none;
   white-space: nowrap;
+}
+
+.btcpw_digital_download_limit_help:before {
+  content: '\003F';
+  font-weight: bolder;
 }
