--- a/assets/src/css/btc-paywall-public.css
+++ b/assets/src/css/btc-paywall-public.css
@@ -9,8 +9,8 @@
   text-align: center;
 }
 .btcpw_pay__preview.preview_img {
-  width: 200px;
-  height: 200px;
+  width: 100px;
+  height: 100px;
 }
 .btcpw_pay__preview.preview_description {
   display: flex;
@@ -1198,18 +1198,19 @@ Revenue types
 }
 
 .btcpw_revenue_post_container fieldset,
-.btcpw_revenue_view_container fieldset,
-.btcpw_revenue_file_container fieldset {
+.btcpw_revenue_view_container fieldset {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   border: 0;
   min-width: 0;
-  padding: 0;
-  height: 75%;
+  padding: 15px 0 20px 0;
+  height: 100%;
 }
-
+.btcpw_revenue_view_container fieldset {
+  justify-content: space-evenly;
+}
 /* .btcpw_revenue_post_container fieldset,
 .btcpw_revenue_view_container fieldset,
 .btcpw_revenue_file_container fieldset {
@@ -1238,7 +1239,6 @@ Revenue types
 #btcpw_revenue_post_button,
 #btcpw_revenue_view_button,
 #btcpw_revenue_file_button {
-  position: absolute;
   display: inline-flex;
   bottom: 0;
   width: 100%;
@@ -1329,4 +1329,27 @@ Pay-per-file
   margin: 5px 0;
   border: 0;
   box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.062);
+}
+
+#btcpw_revenue_container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+a.btcpaywall_checkout,
+button.btcpaywall_add_to_cart {
+  overflow: hidden;
+  width: auto;
+  position: relative;
+  border: 3px solid;
+  border-color: transparent;
+  display: inline-block;
+  line-height: 1;
+  font-weight: normal;
+  text-align: center;
+  padding: 10px;
+  border-radius: 1 px;
+  background-color: #008cba;
+  color: #ffff;
+  cursor: pointer;
 }
