Add button customization option for content store

--- a/assets/src/css/btc-paywall-admin.css
+++ b/assets/src/css/btc-paywall-admin.css
@@ -207,7 +207,7 @@ td.Settled {
 #btcpw_general_pay_per_post_options_paywall,
 #btcpw_general_pay_per_view_options_paywall,
 #btcpw_pay_per_file_paywall,
-#btcpw_general_payment_gateway_options,
+#btcpw_general_content_store_options,
 #btcpw_misc_options {
   border: 1px solid #1e1e1e;
   background: #fff;
@@ -296,7 +296,8 @@ div.btcpw_help_link a:hover {
 #btcpw_pay_per_view_paywall,
 #btcpw_pay_per_file_paywall,
 #btcpw_general_pay_per_post_options_paywall,
-#btcpw_general_pay_per_view_options_paywall {
+#btcpw_general_pay_per_view_options_paywall,
+#btcpw_general_content_store_options {
   display: flex;
 }
 
@@ -304,6 +305,7 @@ div.btcpw_help_link a:hover {
 #btcpw_pay_per_view_paywall > div,
 #btcpw_pay_per_file_paywall > div,
 #btcpw_general_pay_per_post_options_paywall > div,
+#btcpw_general_content_store_options > div,
 #btcpw_general_pay_per_view_options_paywall > div {
   flex: 1;
 }
